<?xml version="1.0"?>
<package>
  <name>multi_robot_traj_planner</name>
  <version>0.0.1</version>
  <description> Multi-robot trajectory planner </description>
  <maintainer email="juncheng001@ntu.edu.sg">Juncheng Li</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ecbs</build_depend>
  <build_depend>octomap</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ecbs</run_depend>
  <run_depend>octomap</run_depend>

  <export>

  </export>
</package>
